@@ -6,7 +6,9 @@ PGXN Client changes log
 pgxnclient 1.2
 ==============
 
-- ``gmake`` if used in favour of ``make`` for platforms where the two are
+- Packages can be downloaded, installed, loaded specifying an URL
+  (ticket #15).
+- Use ``gmake`` in favour of ``make`` for platforms where the two are
   distinct, such as BSD (ticket #14).
 - Added ``--make`` option to select the make executable (ticket #16).
 
